--- a/overview/core-concepts/core-concepts-terminology.mdx
+++ b/overview/core-concepts/core-concepts-terminology.mdx
@@ -1,249 +1,158 @@
 ---
 title: "Core Concepts and Terminology"
-description: "Demystify essential concepts including test cases, assertions, fixtures, parameterized tests, type-parameterized tests, death tests, mocks, matchers, and cardinalities. Recognize the role each plays in typical testing workflows."
+description: "Familiarize yourself with key terms such as test cases, test suites, assertions, parameterized and typed tests, and mocks. Gain clarity on GoogleTest’s approach to structuring and reporting tests, and how these concepts support readable, maintainable tests."
 ---
 
 # Core Concepts and Terminology
 
-GoogleTest offers a rich vocabulary that empowers you to write clear, organized, and effective C++ tests. Understanding the foundational concepts and terminology is crucial to harnessing the framework's full potential. This page breaks down essential elements such as test cases, assertions, fixtures, parameterized tests, mocks, and more, illustrating how they fit into typical testing workflows.
+## Unlocking the Foundations of GoogleTest
+
+Welcome to a focused exploration of the essential concepts and terminology that form the backbone of GoogleTest. This page is designed to equip you with a clear understanding of the fundamental testing constructs such as test cases, test suites, assertions, parameterized and typed tests, and mocks. Grasping these concepts empowers you to write tests that are not just correct but also readable and maintainable.
+
+### Why Care About These Concepts?
+
+Imagine navigating a complex city without a map. You might eventually get to your destination, but the journey will be slow and frustrating. Similarly, mastering GoogleTest’s core terms and testing structures is your map to efficient, reliable, and scalable testing.
+
+Whether you’re a developer striving to validate your code confidently, a team lead setting standards for quality assurance, or a tester seeking to maximize test clarity and maintainability, understanding these concepts will directly impact your productivity and the robustness of your tests.
 
 ---
 
-## Why Knowing These Terms Matters
+## Understanding the Building Blocks
 
-Imagine you're assembling a complex puzzle. Knowing the shape and role of each piece makes the assembly smoother and the final picture clear. In GoogleTest, terms like "test suite," "assertions," or "death tests" are those puzzle pieces. Recognizing what each means and how they interconnect enables you to write tests that are:
+### What Is a Test Case and Test Suite?
 
-- **Isolated and Predictable**: Each test focused on a single behavior.
-- **Maintainable**: Organized logically, easing future changes.
-- **Informative**: Clear feedback when something goes wrong.
+In GoogleTest, the terminology has evolved to align with industry standards:
 
----
+- **Test Case / Test Suite:** A collection of related tests grouped to reflect the structure or functionality of the code being tested. GoogleTest is moving towards using "Test Suite" universally.
 
-## Tests, Test Suites, and Test Programs
+- **Test:** An individual test that exercises specific behavior or logic.
 
-- **Test (`TEST()`)**: An individual examination verifying a particular aspect or behavior of your code, such as checking that a function returns an expected value for given input. It corresponds to a “Test Case” in standard testing vocabulary (ISTQB).
+You write *tests* inside *test suites* to logically organize your validation scenarios. This structure supports reusability and clarity.
 
-- **Test Suite**: A collection of related tests that typically test the same class or module. Grouping your tests into suites reflects your code's structure and helps maintain clarity.
+### Assertions: The Heartbeat of Your Tests
 
-- **Test Program**: An executable that contains one or more test suites. Running the test program executes all its tests unless filtered.
+At the core of every test are *assertions* — statements that check whether certain conditions hold true. GoogleTest offers various assertions:
 
+- **EXPECT_***: Non-fatal assertions that allow the test to continue after failure, helping you detect multiple issues in a single run.
+- **ASSERT_***: Fatal assertions that abort the current function, useful when continuing the test is pointless after failure.
 
-### Naming Notes
+Assertions validate code behavior and produce detailed failure information including file locations and custom messages to streamline debugging.
 
-- GoogleTest uses `TEST(TestSuiteName, TestName)` macro, where both names **must be valid C++ identifiers without underscores** to avoid internal conflicts and maintain composability.
+### Parameterized and Typed Tests: Scalable Testing Patterns
 
-> See [Why test suite names and test names must not contain underscores](https://github.com/google/googletest/blob/main/docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore) for detailed reasoning.
+To avoid repetitive code when testing your functions against a range of inputs or types, GoogleTest provides two powerful concepts:
 
----
+- **Parameterized Tests:** Enable running the same test logic with different input values. Perfect for data-driven scenarios.
 
-## Assertions: Verifying Behavior
+- **Typed Tests:** Allow running the same test logic across different types, ensuring your templated code behaves correctly for various type parameters.
 
-At the heart of each test are **assertions** — checks that confirm your code behaves as expected. GoogleTest offers a spectrum of assertions, including pairs of macros:
+These patterns help you maintain extensive test coverage without sacrificing readability or increasing maintenance overhead.
 
-- `EXPECT_*`: Non-fatal assertions that report failure but continue the current test.
-- `ASSERT_*`: Fatal assertions that abort the current test function immediately upon failure.
+### Mocks: Mastering Interaction Testing
 
-### Example
+GoogleTest’s mock framework (gMock) introduces **mock objects**, which simulate components your code depends on. They:
 
-```cpp
-ASSERT_EQ(x.size(), y.size()) << "Vectors x and y are of unequal length.";
-for (int i = 0; i < x.size(); ++i) {
-  EXPECT_EQ(x[i], y[i]) << "Vectors x and y differ at index " << i;
-}
-```
+- Provide control over a collaborator’s behavior in tests.
+- Enable verification of interactions such as method calls, arguments, and call order.
 
-This combination lets you catch critical failures that prevent further checks, while still able to report multiple errors when appropriate.
+Mocks empower you to isolate the unit under test, increase test speed by avoiding costly dependencies, and focus on specifying behavioral contracts.
 
-### Types of Assertions Covered
+Understanding mocks involves key concepts like:
 
-- Boolean conditions (`EXPECT_TRUE`, `ASSERT_FALSE`)
-- Binary comparisons (`EXPECT_EQ`, `ASSERT_GT`)
-- String comparisons for C strings (`EXPECT_STREQ`)
-- Floating-point comparisons with tolerances (`EXPECT_FLOAT_EQ`, `EXPECT_NEAR`)
-- Exception handling (`EXPECT_THROW`, `ASSERT_NO_THROW`)
-- Predicate assertions for custom conditions
-- Death assertions that verify that code crashes or exits as expected
-
-> For a deeper list and details, see [Assertions Reference](reference/assertions.md).
+- **Mock Classes:** Classes that replace real ones in tests through the `MOCK_METHOD` macro.
+- **Expectations:** Rules set on mocks (using `EXPECT_CALL`) to specify which methods should be called, how often, with what arguments, and what they return.
+- **Matchers:** Tools to specify argument constraints in expectations.
+- **Actions:** Define what a mock method should do when called.
 
 ---
 
-## Test Fixtures: Reusing Configurations
+## GoogleTest’s Approach: How Testing is Structured and Reported
 
-When multiple tests share common objects or setup code, **test fixtures** allow you to write that setup once and reuse it efficiently.
+GoogleTest structures tests systematically, running each test independently to ensure isolation and repeatability. Results are reported clearly, grouped by test suite, distinguishing:
 
-### How Fixtures Work
+- Passed tests
+- Failed tests with detailed context and source locations
+- Tests that are skipped or disabled
 
-1. Define a class derived from `testing::Test`.
-2. Declare common objects and write `SetUp()`/`TearDown()` methods for initialization and cleanup.
-3. Use `TEST_F(FixtureClassName, TestName)` to write tests that can access fixture members.
+This approach promotes confidence in test outcomes and facilitates quick diagnosis of issues.
 
-Each test gets a **fresh** fixture instance, guaranteeing test isolation.
+### Readability and Maintainability
 
-### Example
+By organizing tests into suites, and writing clear, focused assertions, GoogleTest supports maintainable codebases. Parameterized and typed tests reduce duplication and express intent explicitly.
 
-```cpp
-class QueueTest : public testing::Test {
- protected:
-  QueueTest() {
-     q1_.Enqueue(1);
-     q2_.Enqueue(2);
-     q2_.Enqueue(3);
-  }
-
-  Queue<int> q0_;
-  Queue<int> q1_;
-  Queue<int> q2_;
-};
-
-TEST_F(QueueTest, IsEmptyInitially) {
-  EXPECT_EQ(q0_.size(), 0);
-}
-
-TEST_F(QueueTest, DequeueWorks) {
-  int* n = q0_.Dequeue();
-  EXPECT_EQ(n, nullptr);
-
-  n = q1_.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 1);
-  EXPECT_EQ(q1_.size(), 0);
-  delete n;
-
-  n = q2_.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 2);
-  EXPECT_EQ(q2_.size(), 1);
-  delete n;
-}
-```
+Mocks complement this by enabling interaction-based testing where you verify how your code collaborates with its dependencies rather than just the end results.
 
 ---
 
-## Parameterized and Typed Tests
+## Key Terms Glossary
 
-These advanced test forms enable you to run the same test logic on multiple inputs or types without code duplication.
-
-- **Value-Parameterized Tests (`TEST_P`)**: Write tests that receive different values as parameters. Great for data-driven testing.
-
-- **Typed Tests (`TYPED_TEST`)**: Write tests once for a suite of types (classes or built-in types).
-
-- **Type-Parameterized Tests (`TYPED_TEST_P`)**: Define test logic template-like and instantiate with types later, enabling reusable abstract tests.
-
-These patterns increase coverage and reduce boilerplate while keeping tests clean.
-
-For example, with value-parameterized tests:
-
-```cpp
-class FooTest : public testing::TestWithParam<int> {};
-
-TEST_P(FooTest, HandlesValues) {
-  int value = GetParam();
-  EXPECT_TRUE(HandleValue(value));
-}
-
-INSTANTIATE_TEST_SUITE_P(IntValues, FooTest, testing::Values(1, 2, 3));
-```
-
-Learn more in the [Advanced Guide](advanced.md#value-parameterized-tests).
+| Term                   | Description                                                                                   |
+|------------------------|-----------------------------------------------------------------------------------------------|
+| Test                   | An individual unit of executable code that asserts expected behavior or output.              |
+| Test Suite             | A named collection of related tests, used to group tests logically.                          |
+| Assertion              | A check that validates if a condition holds, e.g., equality, non-null, or custom predicates. |
+| Parameterized Test     | A test template executed multiple times with different input parameters.                      |
+| Typed Test             | A test template executed for several types to ensure templated code correctness.              |
+| Mock Object            | A special test double that records how it is used and enforces expectations.                  |
+| Expectation            | A specification of method calls anticipated on a mock object (e.g., method, call count).     |
+| Matcher                | A predicate specifying constraints on method arguments in expectations.                      |
+| Action                 | Defines the behavior a mock method exhibits when invoked.                                    |
 
 ---
 
-## Death Tests
+## Practical Tips and Best Practices
 
-Death tests verify that your code correctly terminates the program (e.g., via assertions failing) under specific conditions.
+- Write *focused* tests that verify one behavior at a time.
+- Use *test suites* to organize tests clearly by component or feature.
+- Leverage *parameterized* and *typed tests* to cover diverse inputs and types efficiently.
+- Adopt *mock objects* to isolate units and verify interactions, especially for external dependencies or complex collaborators.
+- Set expectations *before* exercising mocks.
+- Avoid over-specifying expectations to prevent brittle tests.
+- Use *matchers* to specify argument expectations precisely.
+- When using mocks, prefer `ON_CALL` to specify default behaviors and use `EXPECT_CALL` only where call verification is necessary.
+- Employ *sequences* or `InSequence` to verify ordering of calls where critical.
 
-- Use `EXPECT_DEATH` or `ASSERT_DEATH` macros to check that a statement kills the process and produces expected error messages.
 
-- Death tests run in separate processes to keep the test program alive for other tests.
+## Getting Started Preview
 
-- GoogleTest offers two death test styles:
-  - **Fast** (default): Runs the test in a child process immediately.
-  - **Thread-safe**: More robust, suitable for multithreaded environments, but slower.
+To put these concepts into practice, begin by writing simple tests using the `TEST()` macro, structuring them into suites.
 
-> To ensure correct sequencing and reduce issues, name your death-test suites with the suffix `DeathTest`. If mixing with regular tests, use type aliases to differentiate.
+For mocks, define mock classes using the `MOCK_METHOD` macro and set expectations using `EXPECT_CALL`.
 
-See details at [Death Tests and Exception Handling](advanced.md#death-tests) and [Death Assertions](reference/assertions.md#death).
+Explore parameterized tests with `TEST_P` and typed tests with `TYPED_TEST` when your test scenarios fit those patterns.
 
----
-
-## Mocks, Matchers, and Cardinalities
-
-GoogleTest supports mocking through its companion framework, **GoogleMock** (gMock), enabling you to simulate dependencies and verify behaviors.
-
-### Key Components:
-
-- **Mocks**: Classes where member functions are replaced by mock methods declared with `MOCK_METHOD`. These methods simulate behavior and track calls.
-
-- **Matchers**: Flexible tools to specify criteria for expected arguments in mock method calls, enhancing expressiveness beyond simple equality.
-
-- **Expectations (`EXPECT_CALL`)**: Statements that declare how many times and in which order mock methods should be called.
-
-- **Cardinalities (`Times`)**: Specify how many times the mock method is expected to be invoked:
-
-  - `AnyNumber()`: Unlimited times
-  - `AtLeast(n)`: At least n times
-  - `AtMost(n)`: Up to n times
-  - `Between(m, n)`: Between m and n times
-  - `Exactly(n)`: Exactly n times
-
-### Example
-
-```cpp
-class MockDatabase {
- public:
-  MOCK_METHOD(bool, Connect, (), ());
-  MOCK_METHOD(int, Query, (std::string query), ());
-};
-
-MockDatabase mock_db;
-EXPECT_CALL(mock_db, Connect()).Times(1).WillOnce(Return(true));
-EXPECT_CALL(mock_db, Query(_)).Times(AtLeast(1));
-
-// Code under test...
-```
-
-GoogleMock's rich syntax helps you create precise and maintainable behavioral tests.
+Start your journey here: [GoogleTest Primer](https://google.github.io/googletest/primer.html) and proceed to mocking tutorials such as [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html).
 
 ---
 
-## Cardinalities in Expectations
+## Summary
 
-Cardinalities define the allowed number of times a mocked method is expected to be invoked. They provide control over how strictly you want to enforce call counts:
+This page has introduced key GoogleTest concepts and terminology including test cases and suites, assertion types, parameterized and typed tests, as well as mock objects and their role in interaction testing. Understanding these foundations enhances your ability to write robust and maintainable tests.
 
-| Cardinality           | Description                                           |
-| --------------------- | ----------------------------------------------------- |
-| `AnyNumber()`         | Mock method can be called any number of times         |
-| `AtLeast(n)`          | Called at least *n* times                              |
-| `AtMost(n)`           | Called at most *n* times                               |
-| `Between(m, n)`       | Called between *m* and *n* times, inclusive           |
-| `Exactly(n)` or `n`   | Called exactly *n* times                               |
-
-If `Times()` is not specified, GoogleTest infers it based on other clauses.
+For detailed workflows and examples, visit the linked guides and references throughout this documentation.
 
 ---
 
-## Putting It All Together: Typical Flow
+## See Also
 
-1. **Define tests** with either simple tests (`TEST()`), fixture-based tests (`TEST_F()`), or parameterized/typed tests.
-2. **Add assertions** in tests to verify conditions and expected outputs.
-3. **Group related tests** logically into test suites to mirror your code's structure.
-4. **Use fixtures** to share common setup/teardown.
-5. **Leverage mocks and expectations** to simulate dependencies.
-6. **Run tests** via `RUN_ALL_TESTS()` for automated discovery and execution.
-
-This layered approach ensures your tests are isolated, maintainable, and expressive.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+- [gMock for Dummies (Mocking Basics)](https://google.github.io/googletest/gmock_for_dummies.html)
+- [gMock Cookbook (Advanced Mocks)](https://google.github.io/googletest/gmock_cook_book.html)
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [Assertions Reference](https://google.github.io/googletest/reference/assertions.html)
+- [Core Concepts and Architecture Overview](/overview/core-concepts/architecture-overview)
 
 ---
 
-<Info>
-For more examples and detailed explanations, consult these related resources:
+## Additional Resources
 
-- [GoogleTest Primer](primer.md) — Learn the basics with code examples.
-- [Assertions Reference](reference/assertions.md) — Complete list of assertion macros.
-- [Advanced GoogleTest Topics](advanced.md) — Deep dive into parameterized tests and death tests.
-- [Mocking Reference](reference/mocking.md) — Detailed guide on mocks and expectations.
-- [Testing Reference](reference/testing.md) — Overview of test macros and classes.
-</Info>
+- GoogleTest GitHub Repository: https://github.com/google/googletest
+- GoogleMock GitHub Repository: https://github.com/google/googletest/tree/main/googlemock
 
----
+<Tip>
+Mastering these core concepts will transform your testing practices, enabling you to write clearer tests that are easier to maintain and that provide rapid feedback on code changes.
+</Tip>
+
+<Note>
+This overview focuses on fundamental GoogleTest terminology and core testing elements. For in-depth implementation guidance and advanced topics, explore the related developer guides and API references.
+</Note>
