--- a/overview/core-concepts/architecture-overview.mdx
+++ b/overview/core-concepts/architecture-overview.mdx
@@ -1,164 +1,143 @@
 ---
-title: "System Architecture"
-description: "Visualize the major components of GoogleTest—including test runners, matchers, mock frameworks, and reporting engines—and how they interact in typical workflows. Includes a mermaid diagram to clarify data flow and modular separation."
+title: "System Architecture Overview"
+description: "Visualize the main components of GoogleTest and GoogleMock with a mermaid-based diagram. See how test code, the test runner, assertion engines, and reporting tools work together, including extensibility and platform portability layers."
 ---
 
-# System Architecture of GoogleTest
+# System Architecture Overview
 
-## Understand the Core Components and Their Interactions
-
-GoogleTest is a robust C++ testing framework meticulously designed to streamline test writing, execution, and reporting. This page offers an insightful visualization of GoogleTest’s key architectural components — including test runners, matchers, mock frameworks, and reporting engines — and explains how they collaborate within typical testing workflows. By unpacking these modules and their data flows, you gain a clear perspective on GoogleTest’s modularity and extensibility, empowering you to use and extend the framework effectively.
-
----
-
-## What Is This Page About?
-
-This System Architecture page presents a high-level overview of GoogleTest’s principal components and their interactions during a testing cycle. Unlike the detailed API references or tutorials on writing tests, this page focuses on illustrating the **structural design** that makes GoogleTest powerful and flexible.
-
-It elucidates how GoogleTest orchestrates the journey of a test case — from definition and execution through verification via matchers, mocking behaviors, to final reporting of outcomes. To help visualize this process, a comprehensive Mermaid diagram depicts the flow of data and control among the core modules.
+Explore the core components and their interactions within GoogleTest and GoogleMock through a clear architectural diagram. This page presents how test code, the test runner, assertion engines, reporting mechanisms, and other subsystems collaborate to provide a robust, extensible, and portable testing framework.
 
 ---
 
-## Core Components of GoogleTest Architecture
+## Introduction
 
-Each component in GoogleTest serves a specific purpose in the testing lifecycle.
+Understanding the architecture behind GoogleTest and GoogleMock is essential for grasping how they provide reliable and flexible support for C++ testing and mocking. The components coordinate to execute tests, manage assertions, and generate detailed reports, all while maintaining extensibility and portability.
 
-- **Test Runner**: Manages discovery, scheduling, and execution of test suites and cases. The runner initializes test fixtures, invokes tests, and handles setup/teardown calls.
-
-- **Matchers**: Provide expressive and rich conditions that assertions validate against. They interpret diverse expressions, enabling precise verification of complex data.
-
-- **Mock Framework (GoogleMock)**: Implements mock objects, function stubs, and expectation verifications. It integrates seamlessly with the core test runner to allow interaction-based testing.
-
-- **Reporting Engine**: Captures and formats test outcomes, including success, failure, skips, and crashes. Produces human-readable console output and machine-readable XML reports for CI/CD integration.
-
-- **Test Fixtures and Suites**: Define reusable context and shared resources for grouped tests. Facilitate isolation and organization by controlling test environment lifecycles.
+This overview uses a Mermaid diagram to visualize the main components and their communication flow, offering insight without delving into lower-level implementation detail.
 
 ---
 
-## How These Components Interact: The Testing Workflow
+## High-Level Components
 
-When you run your tests, GoogleTest progresses through several coordinated phases:
-
-1. **Test Discovery and Initialization**
-   - Test runner locates all registered test suites and individual tests.
-   - For each suite, fixtures are created and `SetUpTestSuite()` hooks run at the start.
-
-2. **Test Execution**
-   - Each test case is instantiated with fresh fixtures.
-   - `SetUp()` initializes the test environment.
-   - The test body executes, running your assertions.
-   - Assertions leverage matchers to verify conditions.
-   - GoogleMock intercepts and mocks call interactions if used.
-   - `TearDown()` cleans up after each test.
-
-3. **Result Aggregation and Reporting**
-   - Test results including success, failure, and skipped tests are recorded.
-   - Reporting engine formats results for console output and XML logs.
-   - Summary output aggregates overall results and timings.
-
-4. **Suite and Global Tear Down**
-   - `TearDownTestSuite()` finalizes test suites.
-   - Any registered global environments are cleaned up.
+- **Test Code:** Your source code for individual tests, fixtures, and mocks.
+- **Test Runner:** The executable that initializes and triggers test execution.
+- **Assertion Engine:** Evaluates assertion conditions during tests.
+- **Mocking Engine (gMock):** Provides mock class infrastructure and expectation verification.
+- **Result Reporter:** Handles logging, console output, and XML/JSON report generation.
+- **Event Listeners:** Receive hooks/events during test runs for custom extensions.
+- **Platform Portability Layer:** Abstracts operating system specifics for cross-platform compatibility.
 
 ---
 
-## Visualizing the Architecture
-
-Below is a Mermaid diagram illustrating the main components and their data/control flow during a typical test cycle.
+## Architecture Diagram
 
 ```mermaid
 flowchart TD
 
-  %% Test Program Entry
-  UserCodeTestDefs["User Test Definitions"]
-  Runner["Test Runner"]
-  Fixtures["Test Fixtures & Suites"]
-  SetUpSuite["SetUpTestSuite"]
-  RunTest["Run Individual Tests"]
-  SetUp["SetUp()"]
-  TestBody["Test & Assertions"]
-  Matchers["Matchers"]
-  GoogleMock["GoogleMock (Mocks & Expectations)"]
-  TearDown["TearDown()"]
-  TearDownSuite["TearDownTestSuite"]
-  ResultCollector["Result Collector"]
-  ReportEngine["Reporting Engine"]
+  TC[Test Code]
+  TR[Test Runner]
+  AE[Assertion Engine]
+  ME[Mocking Engine (gMock)]
+  RR[Result Reporter]
+  EL[Event Listeners]
+  PL[Platform Portability Layer]
 
-  %% User triggers test run
-  UserCodeTestDefs -->|Register tests| Runner
+  subgraph "User Test Components"
+    TC
+  end
 
-  %% Runner initializes fixtures and suites
-  Runner --> Fixtures
-  Fixtures --> SetUpSuite
+  subgraph "Core Framework Components"
+    TR -->|Runs| TC
+    TC -->|Performs Assertions| AE
+    TC -->|Uses Mocks and Sets Expectations| ME
+    TC -->|Logs Results and Events| RR
+    RR -->|Emits Events| EL
+    TR -->|Uses Portability Functions| PL
+    AE -->|Reports Output and Failures| RR
+    ME -->|Verifies Expectations and Reports| RR
+  end
 
-  %% Suite setup completes
-  SetUpSuite --> RunTest
+  %% Feedback loop
+  EL -->|May Intercept/Modify| RR
 
-  %% Run each test
-  RunTest --> SetUp
-  SetUp --> TestBody
-  TestBody --> Matchers
-  TestBody --> GoogleMock
-  Matchers --> ResultCollector
-  GoogleMock --> ResultCollector
-  TestBody --> TearDown
+  %% Notes
+  classDef userComp fill:#f9f,stroke:#333,stroke-width:2px;
+  class TC userComp;
 
-  %% Test cleanup
-  TearDown --> RunTest
-
-  %% After all tests in suite
-  RunTest --> TearDownSuite
-  TearDownSuite --> ResultCollector
-  ResultCollector --> ReportEngine
-
-  %% Final output
-  ReportEngine --> ConsoleOutput["Console & XML Output"]
-
-  %% Styling
-  classDef component fill:#e8f1f8,stroke:#2a7ae2,stroke-width:1px,rounded
-  class UserCodeTestDefs,Runner,Fixtures,SetUpSuite,RunTest,SetUp,TestBody,Matchers,GoogleMock,TearDown,TearDownSuite,ResultCollector,ReportEngine,ConsoleOutput component
-
+  classDef coreComp fill:#bbf,stroke:#333,stroke-width:2px;
+  class TR,AE,ME,RR,EL,PL coreComp;
+```
 ```
 
-This flowchart clearly demonstrates how each phase and component is invoked throughout the testing lifecycle.
+---
+
+## Component Descriptions
+
+### Test Code
+The collection of your tests, including test fixtures, test cases, and mock objects. Written by developers, this code defines what is tested and how.
+
+### Test Runner
+The central orchestrator that initializes the GoogleTest framework, discovers tests, manages their lifecycle (setup, execution, teardown), and triggers reporting.
+
+### Assertion Engine
+Evaluates assertions like `EXPECT_EQ`, `ASSERT_TRUE`, etc., capturing pass/fail state and generating user-friendly failure messages with context.
+
+### Mocking Engine (gMock)
+Supplies macros and runtime structures for creating mock classes, setting expectations, specifying behaviors, and verifying interactions.
+
+### Result Reporter
+Collects results data, formatting output for console display and serialization to formats such as XML or JSON for integration with build and CI tools.
+
+### Event Listeners
+Extension points that receive notifications during various test lifecycle events, enabling customized logging, coverage analysis, or other tooling integration.
+
+### Platform Portability Layer
+Abstracts OS differences (Windows, Linux, Mac) for filesystem access, threading, synchronization, and other system-specific operations, ensuring cross-platform consistency.
 
 ---
 
-## Practical Scenarios Illuminated by the Architecture
+## How It Works Together
 
-- **Writing tests with fixtures and mocks:** When you define tests that reuse setups (fixtures) and simulate dependencies (mocks), GoogleTest coordinates the lifecycle of these objects seamlessly, while validating expected behaviors through matchers.
-
-- **Extending capabilities:** Developers looking to add custom matchers or reporters see precisely where to hook their code, ensuring clean integration with the existing modular design.
-
-- **Integrating in CI pipelines:** Reporting components produce detailed XML outputs consumable by CI/CD tools, and test runners support selective test execution and result aggregation.
-
----
-
-## Best Practices & Tips
-
-- Structure your tests into suites with clean fixtures to leverage GoogleTest’s lifecycle optimizations.
-- Use GoogleMock only inside your test bodies to take advantage of automatic mock management.
-- Customize reporting by extending the TestEventListener interface to hook into reporting pipelines.
-- Pay attention to setup and teardown hooks (`SetUpTestSuite()`, `TearDownTestSuite()`) for managing expensive, shared resources.
+1. The **Test Runner** launches and scans for all test cases in the **Test Code**.
+2. Tests execute, invoking the **Mocking Engine** for mocks, and making assertions through the **Assertion Engine**.
+3. Assertion results and mock verification statuses are collected by the **Result Reporter**.
+4. Throughout execution, events are emitted to **Event Listeners** for additional processing.
+5. The **Platform Portability Layer** ensures consistent behavior irrespective of the OS.
+6. Upon completion, the **Result Reporter** outputs test results in human-readable and machine-consumable formats.
 
 ---
 
-## Troubleshooting Common Pain Points
+## Practical Tips
 
-- **Tests not running:** Verify tests are properly registered through the test runner by checking your use of `TEST()`, `TEST_F()`, or other macros.
-- **Unexpected test fixture reuse:** GoogleTest guarantees fixture isolation per test, so ensure any persistent test state is not relying on shared static variables.
-- **Reports missing data:** Confirm your reporting engine is enabled or not overridden by custom listeners.
+- Understanding this architecture helps in customizing event handling and extending GoogleTest via event listeners.
+- The mock engine’s tight coupling with the assertion engine ensures that expectation violations surface immediately with rich diagnostics.
+- Result reporting can be extended or replaced by attaching custom listeners.
+- Portability layer usage ensures your tests behave the same across diverse environments.
+
+---
+
+## Troubleshooting
+
+- If test execution does not start, verify correct initialization of the **Test Runner**.
+- Assertion failures with unclear messages may indicate incorrect use of assertion macros.
+- Unexpected mock failures often result from unfulfilled expectations; examine the output logs carefully.
+- In cross-platform scenarios, ensure the portability layer is correctly abstracting OS differences.
 
 ---
 
 ## Next Steps
 
-- Dive into the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) to get started with writing your first tests.
-- Explore the [Core Concepts and Terminology](https://yourdocslink/overview/core-concepts/concepts-terminology) to deepen your understanding of GoogleTest’s design.
-- Review the API reference for [Test Fixtures and Test Cases](https://yourdocslink/api-reference/core-testing-apis/test-fixture-and-test-case-apis) to master writing complex tests.
+- Dive into the [Core Concepts and Terminology](../overview/core-concepts/core-concepts-terminology) for deeper understanding.
+- Read the [Feature Overview and Capabilities](../overview/core-concepts/feature-overview) to learn about what GoogleTest and GoogleMock can do.
+- Explore [Test Macros and Fixtures](../api-reference/core-test-api/test-macros-and-fixtures) to start writing tests.
+- Review [Defining Mocks and Mocked Methods](../api-reference/mocking-api/defining-mocks-and-methods) to leverage mocking effectively.
+
 
 ---
 
-For full source, see the [GoogleTest GitHub repository](https://github.com/google/googletest).
+For more extensive tutorial content and examples, please consult the main [GoogleTest User's Guide](../index.md).
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googletest/src/gtest-all.cc", "range": "1-100"}]} />
+---
+
+*This documentation is part of the GoogleTest public user guides and API references.*
+
